--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^3.6.0"
+    "vite": "^3.2.3"
   }
 }
